--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Page - Davi Nomoeh Dani</title>
+    <title>Davi Nomoeh Dani</title>
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" />
 
     <!-- CSS style -->
     <link rel="stylesheet" href="style.css">
